--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@awesome-cordova-plugins/camera": "^6.14.0",
     "@awesome-cordova-plugins/core": "^6.14.0",
     "@awesome-cordova-plugins/file-path": "^6.14.0",
+    "@capacitor-community/admob": "^6.1.0",
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.2",
     "@capacitor/core": "6.2.0",
